tried to fix some spacing on the front page

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -188,7 +188,7 @@ hr {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 2rem 0;
+    padding: 2rem 0 0 0;
 }
 
 .hero-container .profile-img {
@@ -243,7 +243,7 @@ hr {
 
 /* About */
 .about-container {
-    padding: 2rem 0;
+    padding: 0 0 2rem 0;
 }
 
 .about-container h2 {
